--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
 
 group 'com.soywiz'
-version "$kortplVersion"
+version "$korteVersion"
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
