Updated to 0.4.4 Added Readme Added korte-vertx Refactorings

--- a/build.gradle
+++ b/build.gradle
@@ -2,38 +2,28 @@ buildscript {
     repositories {
         mavenLocal()
         maven { url "https://dl.bintray.com/kotlin/kotlin-eap-1.1" }
+        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
-
-group 'com.soywiz'
-version "$korteVersion"
-
-apply plugin: 'java'
-apply plugin: 'kotlin'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenLocal()
-    maven { url "https://dl.bintray.com/kotlin/kotlin-eap-1.1" }
-    mavenCentral()
+configurations {
+    provided
 }
 
-sourceSets {
-    main.java.srcDirs = ['src']
-    test.java.srcDirs = ['test']
-    main.resources.srcDirs = ['resources']
-    test.resources.srcDirs = ['testresources']
-    main.java.srcDirs += 'src/main/kotlin'
-}
+allprojects {
+    configurations {
+        provided
+    }
 
-dependencies {
-    compile "com.soywiz:korio-core:0.4.3"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    repositories {
+        mavenLocal()
+        maven { url "https://dl.bintray.com/kotlin/kotlin-eap-1.1" }
+        jcenter()
+        mavenCentral()
+    }
 }
