--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
-rootProject.name = 'korte'
+rootProject.name = 'korte-root'
 
+include(
+        'korte',
+        'korte-jekyll',
+        'korte-vertx',
+)
