--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-korteVersion=0.4.6
-korioVersion=0.4.6
+korteVersion=0.5.0
+korioVersion=0.5.0
 jtranscVersion=0.5.8
-kotlinVersion=1.1-M04
+kotlinVersion=1.1.0-beta-17
 vertxVersion=3.3.3
