--- a/include.gradle
+++ b/include.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 group 'com.soywiz'
-version "$korteVersion"
+version "$korVersion"
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
@@ -42,7 +42,7 @@ sourceSets {
 }
 
 dependencies {
-    compile "com.soywiz:korio-core:$korioVersion"
+    compile "com.soywiz:korio-core:$korVersion"
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
