--- a/korte-jekyll/build.gradle
+++ b/korte-jekyll/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'jtransc'
 mainClassName = "com.soywiz.korte.jekyll.KorteJekyll"
 
 dependencies {
-    compile "com.soywiz:korio:$korioVersion"
+    compile "com.soywiz:korio:$korVersion"
     //compile "io.vertx:vertx-core:$vertxVersion"
 }
 
