--- a/korte-jekyll/build.gradle
+++ b/korte-jekyll/build.gradle
@@ -1,5 +1,3 @@
-apply from: "../include.gradle"
-
 apply plugin: 'kotlin'
 
 apply plugin: 'application'
@@ -10,6 +8,16 @@ mainClassName = "com.soywiz.korte.jekyll.KorteJekyll"
 dependencies {
     compile "com.soywiz:korio:$korVersion"
     //compile "io.vertx:vertx-core:$vertxVersion"
+}
+
+configurations {
+    provided
+}
+
+repositories {
+    mavenLocal()
+    jcenter()
+    mavenCentral()
 }
 
 jtransc {
