--- a/korte-web-example/build.gradle
+++ b/korte-web-example/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: 'jtransc'
 
+mainClassName = 'com.soywiz.korte.web.example.Example1Kt'
 
 dependencies {
     compile project(":korte-web")
