--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,22 @@
-korVersion=0.14.0
-jtranscVersion=0.6.7
-kotlinVersion=1.2.0-beta-31
+# sytleguide
+kotlin.code.style=official
+
+# version
+group=com.soywiz
+version=1.0.0-alpha-1
+
+korioVersion=1.6.6
+kotlinVersion=1.3.21
 vertxVersion=3.4.2
+ktorVersion=1.1.3
+
+# project info
+project.package=korlibs
+project.name=kortemplate-root
+project.scm.url=https://github.com/korlibs/kortemplate
+project.description=kortemplate for kotlin
+project.license.name=MIT License
+project.license.url=https://raw.githubusercontent.com/korlibs/kortemplate/master/LICENSE
+
+# gradle
+kotlin.incremental.multiplatform=true
