--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,12 @@
-rootProject.name = 'korte-root'
+rootProject.name = rootDir.name + "-root"
 
-include(
-        'korte-common',
-        'korte',
-        'korte-js',
+for (file in rootDir.listFiles()) {
+    if (file.name == "build" || file.name == "buildSrc" || file.name.startsWith(".")) continue
+    if (
+		["build.gradle", "build.gradle.kts"].collect { new File(file, it) }.any { it.exists() } &&
+		["settings.gradle", "settings.gradle.kts"].collect { new File(file, it) }.every { !it.exists() }
+	) {
+        include(":${file.name}")
+    }
+}
 
-        'korte-web',
-        'korte-web-example',
-        'korte-jekyll',
-        'korte-vertx',
-)
