Support kotlin native for classes implementing the DynamicType interface

--- a/korte/build.gradle
+++ b/korte/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: com.soywiz.korlibs.KorlibsPluginNoNative
+//apply plugin: com.soywiz.korlibs.KorlibsPluginNoNative
+apply plugin: com.soywiz.korlibs.KorlibsPlugin
 
 korlibs {
     exposeVersion()
