--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,12 @@ vertxVersion=3.4.2
 ktorVersion=1.1.3
 
 # project info
-project.package=korlibs
-project.name=kortemplate-root
-project.scm.url=https://github.com/korlibs/kortemplate
-project.description=kortemplate for kotlin
+project.package=korte
+project.name=korte
+project.scm.url=https://github.com/korlibs/korte
+project.description=Template Engine for Multiplatform Kotlin
 project.license.name=MIT License
-project.license.url=https://raw.githubusercontent.com/korlibs/kortemplate/master/LICENSE
+project.license.url=https://raw.githubusercontent.com/korlibs/korte/master/LICENSE
 
 # gradle
 kotlin.incremental.multiplatform=true
