Prepare for Kotlin 1.3.50

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,19 @@
 kotlin.code.style=official
 
 # version
-group=com.soywiz
-version=1.1.1
+group=com.soywiz.korlibs.korte
+version=1.2.0-SNAPSHOT
 
-korioVersion=1.6.6
-kotlinVersion=1.3.21
+korioVersion=1.8.0
 vertxVersion=3.6.3
-ktorVersion=1.1.3
+ktorVersion=1.2.3
+
+# bintray location
+project.bintray.org=korlibs
+project.bintray.repository=korlibs
+project.bintray.package=korte
 
 # project info
-project.package=korte
 project.name=korte
 project.scm.url=https://github.com/korlibs/korte
 project.description=Template Engine for Multiplatform Kotlin
