--- a/korte-korio/build.gradle
+++ b/korte-korio/build.gradle
@@ -2,5 +2,5 @@ apply plugin: com.soywiz.korlibs.KorlibsPlugin
 
 korlibs {
     dependencyProject(":korte")
-    dependencyMulti("com.soywiz:korio:$korioVersion")
+    dependencyMulti("com.soywiz.korlibs.korio:korio:$korioVersion")
 }
