--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.2.1-SNAPSHOT
+version=1.2.0
 
 korioVersion=1.8.0
 vertxVersion=3.6.3
