--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.2.2
+version=1.2.3-SNAPSHOT
 
 korioVersion=1.8.2
 vertxVersion=3.6.3
