--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.code.style=official
 group=com.soywiz.korlibs.korte
 version=1.2.3-SNAPSHOT
 
-korioVersion=1.8.2
+korioVersion=1.9.6
 vertxVersion=3.6.3
 ktorVersion=1.2.4
 
@@ -23,3 +23,4 @@ project.license.url=https://raw.githubusercontent.com/korlibs/korte/master/LICEN
 
 # gradle
 kotlin.incremental.multiplatform=true
+kotlin.native.ignoreDisabledTargets=true
