--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.2.3-SNAPSHOT
+version=1.2.3
 
 korioVersion=1.9.6
 vertxVersion=3.6.3
