--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.2.4
+version=1.2.5-SNAPSHOT
 
 korioVersion=1.9.7
 vertxVersion=3.6.3
