Use 3g of memory

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,6 @@ project.license.name=MIT License
 project.license.url=https://raw.githubusercontent.com/korlibs/korte/master/LICENSE
 
 # gradle
+org.gradle.jvmargs=-Xmx3g
 kotlin.incremental.multiplatform=true
 kotlin.native.ignoreDisabledTargets=true
