--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.10.1
+version=1.10.2-SNAPSHOT
 
 korioVersion=1.10.5
 vertxVersion=3.6.3
