Started 1.10.4-SNAPSHOT - CI SKIP

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 
 # version
 group=com.soywiz.korlibs.korte
-version=1.10.3
+version=1.10.4-SNAPSHOT
 
 korioVersion=1.11.2
 vertxVersion=3.6.3
