--- a/korte/build.gradle
+++ b/korte/build.gradle
@@ -3,3 +3,8 @@ apply plugin: com.soywiz.korlibs.KorlibsPlugin
 korlibs {
     exposeVersion()
 }
+
+dependencies {
+    add("jvmTestImplementation", "com.vladsch.flexmark:flexmark-all:0.61.6")
+}
+
