--- a/old/gradle.properties
+++ b/old/gradle.properties
@@ -5,6 +5,10 @@ kotlin.code.style=official
 group=com.soywiz.korlibs.korte
 version=2.0.0-SNAPSHOT
 
+korioVersion=1.11.2
+vertxVersion=3.6.3
+ktorVersion=1.3.0
+
 # bintray location
 project.bintray.org=korlibs
 project.bintray.repository=korlibs
