--- a/korte/build.gradle
+++ b/korte/build.gradle
@@ -6,5 +6,6 @@ korlibs {
 
 dependencies {
     add("jvmTestImplementation", "com.vladsch.flexmark:flexmark-all:0.61.6")
+    add("nativeCommonTestApi", "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2-native-mt")
 }
 
